# project_databird_rag

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/.gradio/flagged/: dataset1.csv
project_databird_rag/: __init__.py  dataset.py  features.py  plots.py
project_databird_rag/modeling/: predict.py  train.py
