[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_databird_rag"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "jeanmarcweber" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["project_databird_rag"]
include = ["pyproject.toml", "project_databird_rag/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["project_databird_rag"]
force-sort-within-sections = true

